# RPA-Server

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  server.cpp
Enums/: GameState.cpp  MessageType.cpp  State.cpp
GameObjects/: Game.cpp  Game.h  Player.cpp  Player.h
GameSession/: Game.cpp  Game.h  Player.cpp  Player.h
GameSession/GameStates/: BattleState.cpp  BattleState.h  CharacterCreation.cpp  CharacterCreation.h  GameState.cpp  GameState.h  StateManager.cpp  StateManager.h
Server/: ClientController.cpp  ClientController.h  Server.cpp  Server.h
Server/MessageTypes/: BattleStateMessage.cpp  BattleStateMessage.h  CharacterCreationMessage.cpp  CharacterCreationMessage.h  ConnectionMessage.cpp  ConnectionMessage.h  Message.cpp  Message.h
